# tardigrade-asp

./: .gitignore  .gitlab-ci.yml  BUILD.sh  CD.sh  CMakeLists.txt  README.md  README.rst  TEST.sh  config.xml  environment.txt  jenkins_build.sh  jenkins_deploy.sh  jenkins_job_creation.md  jenkins_job_xml.md  new_build.sh  set_vars.sh
configuration_files/: config.xml.jenkins_pr_builder  config.xml.multiagent_deploy_yellow  config.xml.multiagent_pr_builde  environment.yaml
docs/: CMakeLists.txt  api.rst  bibliography.bib  bitbucket_setup.rst  bitbucket_setup.txt  build.txt  changelog.rst  conf.py  conf.py.in  contribution.txt  dependencies.txt  devops.rst  gitlab_setup.rst  index.rst  jenkins_job_creation.md  jenkins_job_xml.md  jenkins_pr_builder.txt  jenkins_version_control.txt  md2rst.txt  project_brief.txt  release_philosophy.rst  software.bib  stub.rst  targets.txt  theory.rst  user.rst  zreferences.rst
docs/doxygen/: Doxyfile.in
docs/html/: index.html
docs/sphinx/: CMakeLists.txt  api.rst  build.txt  changelog.rst  conf.py.in  dependencies.txt  gitlab_setup.rst  release_philosophy.rst  targets.txt  user.rst
modulefiles/: asp-env
recipe/: conda_build_config.yaml  meta.yaml
src/abaqus/: CMakeLists.txt  single_element_c3d8.inp
src/abaqus/tests/: CMakeLists.txt  test_abaqus.sh
src/cpp/: CMakeLists.txt  abaqus_tools.h  asp.cpp  asp.h  asp_umat.cpp  asp_umat.h  constraint_equations.cpp  constraint_equations.h  cpp_stub.cpp  cpp_stub.h  cpp_stub_umat.cpp  cpp_stub_umat.h  linear_elasticity.cpp  linear_elasticity.h  surface_integration.cpp  surface_integration.h  test_cpp_stub.cpp  traction_separation.cpp  traction_separation.h  umat.cpp  umat.h
src/cpp/tests/: CMakeLists.txt  test_abaqus_tools.cpp  test_asp.cpp  test_constraint_equations.cpp  test_cpp_stub.cpp  test_linear_elasticity.cpp  test_surface_integration.cpp  test_traction_separation.cpp  test_umat.cpp
